lefty search successful

--- a/github-finder/.env
+++ b/github-finder/.env
@@ -1,2 +1,3 @@
 REACT_APP_GITHUB_API="https://api.github.com"
 REACT_APP_GITHUB_TOKEN="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"
+REACT_APP_GITHUB_TOKEN2="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"
